added a few gems

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,10 @@
 
 <h1><%= @article.title %></h1>
+<p>
+  <% if @article.image.exists? %>
+      <%= image_tag @article.image.url(:medium) %><br/>
+  <% end %>
+</p>
 <p><%= @article.body %></p>
 <p>
   Tags:
